# discord-rich-presence

./: Cargo.toml  LICENSE  README.md
examples/: presence.rs
src/: activity.rs  discord_ipc.rs  error.rs  ipc_unix.rs  ipc_windows.rs  lib.rs  pack_unpack.rs  util.rs
src/activity/: builders.rs  mod.rs  models.rs
src/types/: activity.rs  voice_settings.rs
tests/: connected_test.rs  models_test.rs  reconnect_test.rs  update_test.rs
