[package]
name = "discord-rich-presence"
version = "0.2.3"
authors = ["Violet <110789901+vionya@users.noreply.github.com>"]
edition = "2018"
description = "A simple, cross-platform crate for interfacing with Discord's IPC"
readme = "README.md"
repository = "https://github.com/vionya/discord-rich-presence"
license = "MIT"
keywords = ["discord", "rich-presence", "ipc"]
documentation = "https://docs.rs/discord-rich-presence"

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.8", features = ["v4"] }
