[package]
name = "rpcdiscord"
version = "0.2.6"
authors = ["smokingplaya", "Violet <110789901+vionya@users.noreply.github.com>"]
edition = "2018"
description = "A simple, cross-platform crate for interfacing with Discord's IPC"
readme = "README.md"
repository = "https://github.com/smokingplaya/rpcdiscord"
license = "MIT"
keywords = ["discord", "rich-presence", "ipc"]
documentation = "https://docs.rs/rpcdiscord"

[dependencies]
serde_json = "1.0"
serde = "1.0"
serde_repr = "0.1"
serde_derive = "1.0"
uuid = { version = "0.8", features = ["v4"] }
